Add upcoming shows section with current gig dates

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import StickyHeader from '../components/StickyHeader.astro';
 import Hero from '../components/Hero.astro';
 import SocialLinks from '../components/SocialLinks.astro';
+import UpcomingShows from '../components/UpcomingShows.astro';
 import ValuePropsSection from '../components/ValuePropsSection.astro';
 import ServicesSection from '../components/ServicesSection.astro';
 import MusicSection from '../components/MusicSection.astro';
@@ -15,6 +16,7 @@ import ContactSection from '../components/ContactSection.astro';
   <StickyHeader />
   <Hero />
   <SocialLinks />
+  <UpcomingShows />
   <ValuePropsSection />
   <ServicesSection />
   <MusicSection />
